--- a/product/templates/product/base.html
+++ b/product/templates/product/base.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-  <h1>Hello</h1>
+<div class="container text-center">
+    <div class="row justify-content-center">
+        {% for product in products %}
+        <div class="col mt-4 mb-5">
+            <div class="card" style="width: 18rem;">
+                <img src="{{product.image.url}}" style="height:200px;" class="img-fluid mx-auto d-block" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{product.title}}</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card’s content.</p>
+                    <a href="{% url 'product:detail' pk=product.id %}" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+
+        {% endfor %}
+
+    </div>
+</div>
+
 </body>
 </html>
