--- a/product/templates/product/cart_view.html
+++ b/product/templates/product/cart_view.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-<h2>Cart</h2>
-    {{cart}}
+<h1>CART</h1>
+<br>
+<div class="row justify-content-center">
+    {% for item in cart %}
+    {% for product in products %}
+    {% if product.title == item.title %}
+    <div class="card mb-3" style="max-width: 540px; margin: 4px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="{{product.image.url}}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">{{item.title}}</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">{{item.qty}}</li>
+                        <li class="list-group-item">{{item.price}}</li>
+                        <li class="list-group-item">A third item</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
+</div>
 </body>
 </html>
